{
    "appName": "Сделать",
    "myToDos": "Мои дела",
    "done": "Выполнено",
    "newToDo": "Новое",
    "save": "Сохранить",
    "haveToDo": "Что надо сделать...",
    "priority": "Важность",
    "no": "Нет",
    "low": "Низкий", 
    "high": "Высокий",
    "deadline": "Сделать до",
    "ok": "Готово",
    "cancel": "Отмена",
    "delete": "Удалить",
    "exit": "Выйти",
    "alertSaveTask": "Сохранить задачу?",
    "alreadyDeletedError": "Похоже, задача уже была удалена",
    "errorOccured": "Произошла ошибка. Попробуйте ещё раз",
    "noData": "Вы пока не добавили задачи",
    "onCreateError": "При создании возникла ошибка. Попробуйте ещё раз",
    "onEditError": "При редактировании задачи возникла ошибка. Попробуйте ещё раз",
    "onDeleteError": "При удалении задачи возникла ошибка. Попробуйте ещё раз"
}